<resources>
    <string name="app_name">Playlist Generator</string>

    // Navigation names
    <string name="navigation_home">Home</string>
    <string name="navigation_playlists">Playlist Generation Options</string>
    <string name="navigation_daily">Daily Playlist Options</string>
    <string name="navigation_spotify">Spotify Conversion</string>
    <string name="navigation_settings">Settings</string>

    // Header
    <string name="header_title">Playlist Generator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Add playlist string
    <string name="playlist_name">Playlist Name</string>
    <string name="minimum_tracks">Minimum Tracks</string>
    <string name="add_clause">Add New Clause</string>

</resources>
