<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/nav_playlists"
            android:title="@string/navigation_playlists" />
        <item
            android:id="@+id/nav_daily"
            android:title="@string/navigation_daily" />
        <item
            android:id="@+id/nav_spotify"
            android:title="@string/navigation_spotify" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/navigation_settings" />
    </group>
</menu>